Refactor application structure and enhance features
- Updated App.xaml to include new resource dictionaries for styles and converters.
- Replaced references to old view models and routes in AppShell.xaml and AppShell.xaml.cs.
- Introduced new StartPage and ThemeSettingsPage with corresponding view models for improved navigation and theme management.
- Added IsNullConverter and IsNotNullConverter for better data binding.
- Implemented new domain models for Notification, Theme, and Tome, along with their respective use cases.
- Removed outdated services and models to streamline the codebase.
- Updated project structure to enhance maintainability and readability.

--- a/Grimoire.csproj
+++ b/Grimoire.csproj
@@ -26,7 +26,7 @@
 		<ApplicationTitle>Grimoire</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.grimoire</ApplicationId>
+		<ApplicationId>com.grimoire.app</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -65,13 +65,17 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<MauiXaml Update="Views\ArchivePage.xaml">
+		<MauiXaml Update="Presentation\Views\ArchivePage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Views\ThemeSettingsPage.xaml">
+		<MauiXaml Update="Presentation\Views\ThemeSettingsPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Presentation\Views\StartPage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 	</ItemGroup>
